# quicksilver

./: .gitignore  .travis.yml  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  PULL_REQUEST_TEMPLATE.md  README.md  RELEASE_CHECKLIST.md  appveyor.yml  bridge.js  bugs  build.ps1  build.rs  check-web-examples.sh  commands.sh  create-release.sh  index.html  rustfmt.toml  setup.sh  wasm-todo
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report-template.md  bug-report.md  feature-request-template.md  feature-request.md  feature_request.md  question-template.md  question.md
.github/workflows/: integration.yml  rust.yml
blinds/: CHANGES.md  Cargo.toml  README.md
blinds/examples/: cache.rs  echo.rs
blinds/src/: event.rs  event_cache.rs  event_stream.rs  lib.rs  run.rs  settings.rs  window.rs
blinds/src/event/: convert.rs  gamepad.rs  keyboard.rs  pointer.rs
docs/: 02_image.wasm  06_timers.example.js  06_timers.wasm  08_input.wasm  bridge.js  camera.example.js  camera.js  camera.wasm  draw-geometry.example.js  draw-geometry.js  draw-geometry.wasm  example.html  font.example.js  font.js  font.wasm  image.example.js  image.js  image.wasm  immi.example.js  index.html  lyon.example.js  lyon.js  lyon.wasm  prism.css  prism.js  raycast.example.js  raycast.js  raycast.wasm  rgb-triangle.example.js  rgb-triangle.js  rgb-triangle.wasm  sound.example.js  sound.js  sound.wasm  stopwatch.example.js  stopwatch.js  stopwatch.wasm  style.css
docs/tutorials/: book.toml
docs/tutorials/book/: getting_started.html  index.html  print.html  searchindex.js
docs/tutorials/book/advanced/: advanced.html  minesweeper.html
docs/tutorials/book/basics/: a_moving_rectangle.html  audio.html  basics.html  hello_world.html
docs/tutorials/book/introduction/: introduction.html
docs/tutorials/src/: SUMMARY.md  getting_started.md
docs/tutorials/src/advanced/: minesweeper.md
docs/tutorials/src/basics/: a_moving_rectangle.md  audio.md  hello_world.md
docs/tutorials/src/introduction/: introduction.md
docs/wasm/: basic.wasm  draw-geometry.wasm  font.wasm  image.wasm  pulsing-circle.wasm  raycast.wasm  sound.wasm
elefont/: CHANGES.md  Cargo.toml  README.md
elefont/examples/: render_image.rs
elefont/src/: fontdue_provider.rs  image_impl.rs  lib.rs  rusttype_provider.rs
example/: example.rs
examples/: 00_window.rs  01_square.rs  02_image.rs  03_geometry.rs  03_rgb_triangle.rs  04_render_to_texture.rs  05_blending.rs  06_text.rs  06_timers.rs  07_resize.rs  07_text.rs  08_input.rs  10_resize.rs  atlas.rs  basic.rs  blending.rs  camera.rs  draw-geometry.rs  example.rs  font.rs  geometry.rs  image.atlas  image.rs  immi.rs  loading_screen.rs  lyon.rs  meteors.rs  mouse.rs  platformer.rs  pulsing-circle.rs  pulsing_circle.rs  raycast.rs  resize.rs  rgb-triangle.rs  saving.rs  set-cursor.rs  sound.rs  stopwatch.rs  surface.rs  wasm.rs
gestalt/: Cargo.toml  README.md
gestalt/src/: desktop.rs  error.rs  lib.rs  web.rs
gestalt/src/web/: stdweb.rs  web_sys.rs
golem/: CHANGES.md  Cargo.toml  PLATFORMS.md  README.md
golem/examples/: 3d_scene.rs  blend.rs  depth.rs  geometry.rs  hello-triangle.rs  image.rs  surfaces.rs
golem/src/: attribute.rs  blend.rs  buffer.rs  context.rs  depth.rs  lib.rs  shader.rs  surface.rs  texture.rs  uniform.rs
html/: index.html  script.js  wasm.wasm
old-examples/: font.rs  raycast.rs  set-cursor.rs
platter/: Cargo.toml  LICENSE.md  README.md
platter/src/: desktop.rs  lib.rs  web.rs
platter/src/web/: stdweb.rs  web_sys.rs
quicksilver/: Cargo.toml
quicksilver/docs/: 02_image.example.js  07_text.example.js  08_input.example.js  example.html  index.html  style.css
quicksilver/examples/: 05_blending.rs  09_events.rs
quicksilver/src/: geom.rs  input.rs  lib.rs  run.rs  window.rs
quicksilver/src/geom/: shape.rs
quicksilver/src/geom/objects/: mod.rs
quicksilver/src/graphics/: circle_points.rs  font.rs  lyon.rs  vertex.rs  view.rs
scripts/: pre-commit  set-wasm
src/: asset.rs  backend.rs  bin.rs  bridge.rs  error.rs  file.rs  geom.rs  gl.rs  graphics.rs  input.rs  level.rs  lib.rs  lifecycle.rs  manager.rs  prelude.rs  run.rs  save.rs  saving.rs  screen.rs  sound.rs  state.rs  surface.rs  timer.rs  tutorials.rs  util.rs  window.rs
src/assets/: level.rs  list.rs  manager.rs  mod.rs
src/audio/: mod.rs  sound.rs
src/backend/: gl3.rs  image_data.rs  mod.rs  surface_data.rs  webgl.rs
src/ffi/: mod.rs  wasm.rs
src/geom/: bounded.rs  circ.rs  circle.rs  line.rs  mod.rs  positioned.rs  quadtree.rs  rect.rs  rectangle.rs  scalar.rs  shape.rs  tilemap.rs  transform.rs  util.rs  vector.rs
src/geom/objects/: line.rs  mod.rs  triangle.rs
src/geom/polygon/: line.rs  mod.rs  point.rs  polygon.rs
src/gl/: desktop.rs  mod.rs  wasm.rs
src/graphics/: animation.rs  atlas.rs  backend.rs  bridge.rs  camera.rs  canvas.rs  color.rs  draw_call.rs  drawable.rs  font.rs  frontend.rs  gl_backend.rs  image.rs  image_scale_strategy.rs  immi.rs  lyon.rs  mesh.rs  mod.rs  projection.rs  resize.rs  resize_handler.rs  sprite.rs  surface.rs  texture.rs  vertex.rs  view.rs  viewport.rs  window.rs
src/graphics/backend/: blend_mode.rs  gl3.rs  image_data.rs  mod.rs  surface_data.rs  webgl.rs
src/input/: boolean.rs  builder.rs  button.rs  button_state.rs  event.rs  gamepad.rs  key.rs  keyboard.rs  mod.rs  mouse.rs  mouse_cursor.rs  state.rs  viewport.rs
src/input/gamepad/: attribute.rs  gamepad.rs  manager.rs  mod.rs
src/lifecycle/: application.rs  asset.rs  event.rs  gamepad_provider.rs  mod.rs  run.rs  settings.rs  state.rs  window.rs
src/sound/: bucket.rs  error.rs  instance.rs  play_state.rs  player.rs  provider.rs
src/tutorials/: _01_basic.rs  _02_drawing.rs  _03_input.rs  _04_lifecycle.rs  _05_images.rs  _06_asset_combinators.rs  _07_font.rs  _07_sound.rs  _08_animations_and_atlases.rs  _08_sound.rs  _09_animations_and_atlases.rs  _10_views.rs  _11_mesh.rs  drawing.rs  lifecycle.rs  mod.rs
