[package]
name = "quicksilver"
description = "A simple game framework for 2D games in pure Rust"
version = "0.4.0-alpha0"
authors = ["Ryan Goldstein <ryanisaacg@gmail.com>"]
categories = ["game-engines"]
homepage = "https://ryanisaacg.github.io/quicksilver"
keywords = ["game", "audio", "graphics", "gamedev"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/ryanisaacg/quicksilver"
exclude = ["docs/*"]
edition = "2018"

[features]
# complex_shapes, fonts, gamepads, sounds
default = ["easy_log", "saving"]

easy_log = ["simple_logger", "web_logger"]
gamepad = ["blinds/gamepad"]
saving = ["gestalt"]
stdweb = ["gestalt/stdweb", "platter/stdweb", "blinds/stdweb", "golem/stdweb"]
web-sys = ["gestalt/web-sys", "platter/web-sys", "blinds/web-sys", "golem/web-sys"]

[badges]

travis-ci = { repository = "ryanisaacg/quicksilver", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
bytemuck = "1.0"
gestalt = { version = "0.1", optional = true }
golem = "0.1.0-alpha6"
image = { version = "0.22", default-features = false, features = ["png_codec", "jpeg"] }
log = "0.4"
mint = "0.5.3"
platter = "0.1"
blinds = { version = "=0.1.0-alpha10", features = ["gl"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
simple_logger = { version = "1.4", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web_logger = { version = "0.2", optional = true }
