[package]
name = "blinds"
description = "Wrap an async abstraction over a window"
version = "0.2.0"
authors = ["Ryan Goldstein <ryan@ryanisaacg.com>"]
categories = ["game-development", "web-programming"]
keywords = ["async", "window"]
license = "MIT/Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/ryanisaacg/blinds"

[package.metadata.docs.rs]
features = ["event-cache", "favicon", "gamepad"]

[features]
default = ["favicon", "gamepad"] # , "image", "gl"
#image = ["image/image"]
event-cache = ["enum-map", "rustc-hash"]
favicon = ["image"]
gamepad = ["gilrs"]
# gl = ["glutin", "glow"]
# [target.'cfg(not(target_arch = "wasm32"))'.features]
[target.'cfg(target_arch = "wasm32")'.features]
web-sys = ["winit/web-sys"]
gl = ["glutin", "glow"]
# gl = ["glutin"]

[dependencies]
enum-map = { version = "0.6.2", default-features = false, optional = true }
futures-util = { version = "0.3.1", default-features = false }
futures-executor = { version = "0.3.1", default-features = false, features = ["std"] }
gilrs = { version = "0.8", optional = true }
image = { version = "0.23", optional = true, default-features = false }
mint = "0.5"
rustc-hash = { version = "1.1.0", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glow = { version = "0.4.0", default-features = false }
glutin =  { version = "0.26.0" }
winit = "0.24.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.22"
wasm-bindgen = "0.2"
web-sys = { version = "0.3.22", features = ["HtmlHeadElement", "WebGlRenderingContext"] }
winit = { version = "0.24.0", features = ["web-sys"] }

[[example]]
name = "cache"
required-features = ["event-cache"]
